<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_menuCiclo"
            android:icon="@drawable/ic_ciclo"
            android:title="@string/menu_ciclo" />
        <item
            android:id="@+id/nav_menuMaterias"
            android:icon="@drawable/asignatura"
            android:title="@string/menu_materias" />
        <item
            android:id="@+id/nav_menuLocales"
            android:icon="@drawable/aula_salon"
            android:title="@string/menu_locales" />
        <item
            android:id="@+id/nav_menuCoordinador"
            android:icon="@drawable/coordinador"
            android:title="@string/menu_coordindor" />
        <item
            android:id="@+id/nav_menuAsignar"
            android:icon="@drawable/prupuesta"
            android:title="Asignar Asignatura" />
        <item
            android:id="@+id/nav_menuEncargados"
            android:icon="@drawable/docentes"
            android:title="@string/encargados" />
        <item
            android:id="@+id/nav_menuSolicitudesHorario"
            android:icon="@drawable/prupuesta"
            android:title="@string/solicitar_horario" />
        <item
            android:id="@+id/nav_menuRespuestaSolicitud"
            android:icon="@drawable/menu"
            android:title="@string/respuesta_a_solicitudes" />
        <item
            android:id="@+id/nav_menuSolicitudesAtendidas"
            android:icon="@drawable/menu"
            android:title="@string/solicitudes_atendidas" />
        <item
            android:id="@+id/nav_menuPropuesta"
            android:icon="@drawable/evento"
            android:title="@string/propuestas" />
        <item
            android:id="@+id/nav_menuHorarios"
            android:icon="@drawable/horarios"
            android:title="@string/menu_horarios" />

        <item
            android:id="@+id/nav_menuEventos"
            android:icon="@drawable/evento"
            android:title="@string/menu_eventos" />


    </group>
</menu>